--- a/deploy_war_tomcat.yml
+++ b/deploy_war_tomcat.yml
@@ -1,5 +1,5 @@
 ---
-- hosts: tomcatServer
+- hosts: server1
   vars:
     - warName: webgoat-server-v8.1.0.war
     - warRemotePath: /var/lib/tomcat9/webapps/ROOT
