--- a/deploy_war_tomcat.yml
+++ b/deploy_war_tomcat.yml
@@ -1,5 +1,6 @@
 ---
 - hosts: server1
+  become: yes
   vars:
     - warName: webgoat-server-v8.1.0.war
     - warRemotePath: /var/lib/tomcat9/webapps/ROOT
