--- a/deploy_war_tomcat.yml
+++ b/deploy_war_tomcat.yml
@@ -8,6 +8,7 @@
   vars:
     - warName: webgoat-server-v8.1.0.war
     - warRemotePath: /var/lib/tomcat9/webapps/ROOT
+      ansible_python_interpreter: /usr/bin/python3
   tasks:
     - name: Create WAR file
       shell: "jar -cvf/home/boris3/webgoat-server-v8.1.0.war *"
