--- a/deploy_war_tomcat.yml
+++ b/deploy_war_tomcat.yml
@@ -13,7 +13,7 @@
   tasks:
     - name: Create WAR file
       shell: "jar -cf webgoat-server-v8.1.0.war *"
-      ignore_errors: true
+      #ignore_errors: true
       args:
           chdir: "{{ warLocalPath }}"
     - name: Download WAR to server
