--- a/deploy_war_tomcat.yml
+++ b/deploy_war_tomcat.yml
@@ -12,9 +12,9 @@
      ansible_python_interpreter: /usr/bin/python3
   tasks:
     - name: Create WAR file
-      #shell: "jar -cf webgoat-server-v8.1.0.war *"
+      shell: "jar -cf webgoat-server-v8.1.0.war *"
       #ignore_errors: true
-      command: /bin/sh -c 'jar -cf webgoat-server-v8.1.0.war *'
+      #command: /bin/sh -c 'jar -cf webgoat-server-v8.1.0.war *'
       args:
           chdir: /home/boris3
     - name: Download WAR to server
