--- a/change_file_content.yml
+++ b/change_file_content.yml
@@ -8,6 +8,6 @@
       lineinfile:
         dest: "/home/boris3/testFile"
         regexp: "key2="
-        line: "key2=this line is modified "
+        line: "key2=xxx"
         state: present
 
