--- a/deploy_war_tomcat.yml
+++ b/deploy_war_tomcat.yml
@@ -12,11 +12,16 @@
      ansible_python_interpreter: /usr/bin/python3
   tasks:
     - name: Create WAR file
-      shell: "jar -cf webgoat-server-v8.1.0.war *"
+      shell: "jar -cf /home/boris3/webgoat-server-v8.1.0.war *"
       #ignore_errors: true
       #command: /bin/sh -c 'jar -cf webgoat-server-v8.1.0.war *'
-      args:
-          chdir: /home/boris3
+      #args:
+          #chdir: /home/boris3
+
+    - name: Wait for war to be created
+      wait_for:
+        path: /home/boris3
+
     - name: Download WAR to server
       synchronize: src={{ warLocalPath }}/{{ warName }} dest={{ warRemotePath }}/{{ warName }}
 
