--- a/demo.yml
+++ b/demo.yml
@@ -10,10 +10,10 @@
   tasks:
     - name: Install httpd service
       apt:
-        name: httpd
+        name: nginx
         state: present
 
-    - name: Start httpd service
-      apt:
-        name: httpd
-        state: started
+    #- name: Start httpd service
+    #  apt:
+       # name: httpd
+      #  state: started
