--- a/deploy_war_tomcat.yml
+++ b/deploy_war_tomcat.yml
@@ -23,16 +23,19 @@
         path: /home/boris3
 
     - name: Download WAR to server
-      synchronize: src={{ warLocalPath }}/{{ warName }} dest={{ warRemotePath }}/{{ warName }}
+      #synchronize: src={{ warLocalPath }}/{{ warName }} dest={{ warRemotePath }}/{{ warName }}
+      shell: "cp /home/boris3/webgoat-server-v8.1.0.war /var/lib/tomcat9/webapps/ROOT"
 
     - name: Unzip WAR file
-      unarchive: src={{ warRemotePath }}/{{ warName }} dest=/var/lib/tomcat9/webapps/ROOT copy=no mode=0755 owner=tomcat9 group=tomcat9
-      notify:
-        - Restart tomcat9
+      #unarchive: src={{ warRemotePath }}/{{ warName }} dest=/var/lib/tomcat9/webapps/ROOT copy=no mode=0755 owner=tomcat9 group=tomcat9
+      shell: "jar xvf /var/lib/tomcat9/webapps/ROOT/webgoat-server-v8.1.0.war"
+      notify: "Restart tomcat9"
 
-    - name: Delete remote war file
-      file: path={{ warRemotePath }}/{{ warName }} state=absent
+
 
   handlers:
-    - name: Restart tomcat9
-      service: name=tomcat9 state=restarted
+    - name: "Restart tomcat9"
+      shell: "service tomcat9 restart"
+      #service:
+        #name: tomcat9.service
+        #state: restarted
